base/src/test/resources/failure/tyck/issues/issue292.aya.txt
In file $FILE:9:15 ->

  7 |   | false
  8 | 
  9 | def u : Nat => true
                     ^--^

Error: Cannot check the expression
         true
       of type
         Bool
       against the type
         Nat

1 error(s), 0 warning(s).
What are you doing?
